# cxxlog

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  advanced.cxx  advanced.hxx  main.cxx
include/cxxlog/: cxxlog.hxx
